--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,8 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!--  dependency>
-			<groupId>org.jboss.ejb3</groupId>
-			<artifactId>jboss-ejb3-api</artifactId>
-			<version>3.1.0</version>
-		</dependency-->
+		<!-- dependency> <groupId>org.jboss.ejb3</groupId> <artifactId>jboss-ejb3-api</artifactId> 
+			<version>3.1.0</version> </dependency -->
 
 	</dependencies>
 
@@ -88,12 +85,12 @@
 						<version>3.3.0-01</version>
 					</dependency>
 
-
 					<dependency>
 						<groupId>org.codehaus.groovy</groupId>
 						<artifactId>groovy-eclipse-batch</artifactId>
-						<version>2.5.4-01</version>
+						<version>2.5.9-01</version>
 					</dependency>
+
 				</dependencies>
 			</plugin>
 			<plugin>
@@ -113,7 +110,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
 	<pluginRepositories>
 		<pluginRepository>
 			<id>bintray</id>
@@ -128,15 +124,8 @@
 		</pluginRepository>
 	</pluginRepositories>
 
-	<!--repositories>
-		<repository>
-			<id>redhat-ga</id>
-			<url>https://maven.repository.redhat.com/ga/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-	</repositories-->
+	<!--repositories> <repository> <id>redhat-ga</id> <url>https://maven.repository.redhat.com/ga/</url> 
+		<snapshots> <enabled>false</enabled> </snapshots> </repository> </repositories -->
 
 	<reporting>
 		<plugins>
